testing/errors/macrotwice1.a
	*=$1000
	!src "alreadydefined.inc"
	!macro m @arg {
		nop
	}
